kubeflow/common/knative/upstream/knative-serving/base/istio-authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata: # kpt-merge: knative-serving/activator-service
  name: activator-service
  namespace: knative-serving
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: activator
  rules:
  - {}
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata: # kpt-merge: knative-serving/autoscaler
  name: autoscaler
  namespace: knative-serving
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: autoscaler
  rules:
  - {}
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata: # kpt-merge: knative-serving/controller
  name: controller
  namespace: knative-serving
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: controller
  rules:
  - {}
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata: # kpt-merge: knative-serving/webhook
  name: webhook
  namespace: knative-serving
spec:
  action: ALLOW
  selector:
    matchLabels:
      role: webhook
  rules:
  - {}
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata: # kpt-merge: knative-serving/istio-webhook
  name: istio-webhook
  namespace: knative-serving
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: istio-webhook
  rules:
  - {}
---
# DestinationRule for mTLS
apiVersion: "networking.istio.io/v1alpha3"
kind: DestinationRule
metadata: # kpt-merge: knative-serving/knative
  name: knative
  namespace: knative-serving
spec:
  host: "*.knative-serving.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
